--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,9 +7,46 @@
     <!-- Links -->
     <link rel="shortcut icon" href="./assets/images/smartfuntionaltraining-logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-    
+        <!-- Header -->
+        <header>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid d-flex justify-content-between align-items-start">
+                    <div>
+                        <a class="navbar-brand d-flex align-items-center" href="#">
+                            <img src="./assets/images/smartfuntionaltraining-logo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+                            <h1>Smart Funtional Training</h1>
+                          </a>
+                    </div>
+                    <div class="pt-2">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse px-0" id="navbarNav">
+                          <ul class="navbar-nav">
+                            <li class="nav-item">
+                              <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Nuestro equipo</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Planes</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Contacto</a>
+                            </li>
+                          </ul>
+                        </div>
+                    </div>
+                </div>
+              </nav>
+        </header>
+<!-- Javascript -->
 <script src="./scripts/script.js"></script>
+<script src="./scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
