--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,12 +72,12 @@
             </div>
             <article class="col-12 col-md-6">
               <h3>Agustín Argañaraz</h3>
-              <img src="./assets/images/perfil-agustin.jpg" alt="foto profesor Agustin" class="py-3">
+              <img src="./assets/images/agustin-perfil.jpeg" alt="foto profesor Agustin" class="py-3">
               <h4 class="mt-2 fs-5">Tecnico Universitario en Actividad Fisica y Fitness</h4>
               <p class="subtexto">Univesidad Católica de Salta</p>
 
               <!-- Modal -->
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agustin-argañaraz">
+              <button type="button" class="btn btn-primary mb-5" data-bs-toggle="modal" data-bs-target="#agustin-argañaraz">
                 Conóceme
               </button>
               
@@ -100,7 +100,7 @@
             </article>
             <article class="col-12 col-md-6">
               <h3>Franco Acosta</h3>
-              <img src="./assets/images/perfil-agustin.jpg" alt="foto profesor Franco" class="py-2">
+              <img src="./assets/images/franco-perfil.jpeg" alt="foto profesor Franco" class="py-2">
               <h4 class="mt-2 fs-5">Tecnico Universitario en Actividad Fisica y Fitness</h4>
               <p class="subtexto">Univesidad Católica de Salta</p>
               <!-- Modal -->
