--- a/public_html/index.html
+++ b/public_html/index.html
@@ -128,6 +128,8 @@
           </div>
         </section>
 
+        <article></article>
+
         <!-- Boton whatsapp -->
         <div class="whatsapp">
           <a href="https://api.whatsapp.com/send/?phone=543876120155&text=Hola%2C+entr%C3%A9+a+su+sitio+web+y+me+interesa+tener+mas+detalle+de+sus+servicios&type=phone_number&app_absent=0" target="_blank"><img src="./assets/images/whatsapp.png" alt="icono whatsapp"></a>
