--- a/public_html/index.html
+++ b/public_html/index.html
@@ -128,7 +128,9 @@
           </div>
         </section>
 
-        <article></article>
+        <article>
+          
+        </article>
 
         <!-- Boton whatsapp -->
         <div class="whatsapp">
