feature: phrase changing main

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,7 +60,8 @@
         <main>
             <div class="banner">
                 <div class="oscurecer"></div>
-                <p>“Smart Functional Training: Flexibilidad y excelencia en entrenamiento a distancia, adaptado a tu ritmo y estilo de vida.”</p>
+                <p id="mensaje" class="frases">“Smart Functional Training: Flexibilidad y excelencia en entrenamiento a distancia, adaptado a tu ritmo y estilo de vida.”</p>
+                <!-- <p id="mensaje2" class="frases d-none">“Smart Functional Training: Flexibilidad y excelencia en entrenamiento a distancia, adaptado a tu ritmo y estilo de vida.”</p> -->
             </div>
         </main>
 
@@ -128,9 +129,15 @@
           </div>
         </section>
 
-        <article>
-          
-        </article>
+        <section class="container-fluid p-5 bg-oscuro" id="planes">
+          <div class="row">
+            <div class="col-12 pb-5 text-center">
+              <h2>Planes</h2>
+
+            </div>
+
+          </div>
+        </section>
 
         <!-- Boton whatsapp -->
         <div class="whatsapp">
