change: colors and images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
         <!-- Header -->
         <header>
-            <nav class="navbar navbar-expand-lg bg-oscuro">
+            <nav class="navbar navbar-expand-lg bg-oscuro" data-bs-theme="dark">
                 <div class="container-fluid d-flex justify-content-between align-items-start">
                     <div>
                         <a class="navbar-brand d-flex align-items-center" href="#">
