--- a/index.html
+++ b/index.html
@@ -129,14 +129,72 @@
           </div>
         </section>
 
-        <section class="container-fluid p-5 bg-oscuro" id="planes">
+        <!-- Planes -->
+        <section class="container-fluid p-5 bg-oscuro d-flex flex-column align-items-center" id="planes">
           <div class="row">
-            <div class="col-12 pb-5 text-center">
+            <div class="col-12 text-center">
               <h2>Planes</h2>
-
             </div>
-
           </div>
+          <div class="row">
+            <div class="col-12 col-md-4 mt-5">
+              <div class="card text-center" style="width: 18rem; height: 100%;">
+                <img src="./assets/images/a-distancia.jpg" class="card-img-top" alt="laptop plan online">
+                <div class="card-body">
+                  <h5 class="card-title">Online</h5>
+                  <p class="card-text">Plan y asesoramientos en entrenamientos a distancia. Con presencia o no de tus entrenadores</p>
+                  <span class="badge text-bg-success">Disponible</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 mt-5">
+              <div class="card text-center" style="width: 18rem; height: 100%;">
+                <img src="./assets/images/hibrido.jpg" class="card-img-top" alt="plan hibrido">
+                <div class="card-body">
+                  <h5 class="card-title">Hibridos</h5>
+                  <p class="card-text">Plan y asesoramientos en entrenamiento a distacia con opcion a una vez presencial u online a la semana con tu entrenador</p>
+                  <span class="badge text-bg-warning">Consultar disponibilidad</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 mt-5">
+              <div class="card text-center" style="width: 18rem; height: 100%;">
+                <div id="no-disponible">
+                  <p>Proximamente</p>
+                </div>
+                <img src="./assets/images/presencial.jpg" class="card-img-top" alt="plan presencial">
+                <div class="card-body">
+                  <h5 class="card-title">Presencial</h5>
+                  <p class="card-text">Plan, asesoramiento y entrenamientos de forma presencial con tu entrenador</p>
+                  <span class="badge text-bg-danger">No disponible</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 mt-5">
+              <div class="card text-center" style="width: 18rem; height: 100%;">
+                <img src="./assets/images/coaching.jpg" class="card-img-top" alt="plam coaching ontológico">
+                <div class="card-body">
+                  <h5 class="card-title">Coaching ontológico</h5>
+                  <p class="card-text">Una manera de desafiarte y guiar tu camino de recomposicion corporal de forma integra abarcando tus emociones y juicios</p>
+                  <span class="badge text-bg-success">Disponible</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 mt-5">
+              <div class="card text-center" style="width: 18rem; height: 100%;">
+                <img src="./assets/images/coaching-deportivo.jpg" class="card-img-top" alt="plan coaching deportivo">
+                <div class="card-body">
+                  <h5 class="card-title">Coaching deportivo</h5>
+                  <p class="card-text">Si sos deportista y/o trabajas en una entidad deportiva, conoce nuevas herramientas para logar resultados mas eficientes con aprendizajes y procesos para vos</p>
+                  <span class="badge text-bg-success">Disponible</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          
         </section>
 
         <!-- Boton whatsapp -->
