--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <img src="./assets/images/a-distancia.jpg" class="card-img-top" alt="laptop plan online">
                 <div class="card-body">
                   <h5 class="card-title">Online</h5>
-                  <p class="card-text">Plan y asesoramientos en entrenamientos a distancia. Con presencia o no de tus entrenadores</p>
+                  <p class="card-text">Plan y asesoramientos en entrenamientos a distancia. Con presencia o no de tus entrenadores online</p>
                   <span class="badge text-bg-success">Disponible</span>
                 </div>
               </div>
@@ -151,8 +151,8 @@
               <div class="card text-center" style="width: 18rem; height: 100%;">
                 <img src="./assets/images/hibrido.jpg" class="card-img-top" alt="plan hibrido">
                 <div class="card-body">
-                  <h5 class="card-title">Hibridos</h5>
-                  <p class="card-text">Plan y asesoramientos en entrenamiento a distacia con opcion a una vez presencial u online a la semana con tu entrenador</p>
+                  <h5 class="card-title">Híbridos</h5>
+                  <p class="card-text">Plan y asesoramientos en entrenamiento a distacia con opción a una sesión presencial u online por semana con tu entrenador</p>
                   <span class="badge text-bg-warning">Consultar disponibilidad</span>
                 </div>
               </div>
@@ -177,7 +177,7 @@
                 <img src="./assets/images/coaching.jpg" class="card-img-top" alt="plam coaching ontológico">
                 <div class="card-body">
                   <h5 class="card-title">Coaching ontológico</h5>
-                  <p class="card-text">Una manera de desafiarte y guiar tu camino de recomposicion corporal de forma integra abarcando tus emociones y juicios</p>
+                  <p class="card-text">Una manera de desafiarte y guiar tu camino de recomposición corporal de forma integra abarcando tus emociones y juicios</p>
                   <span class="badge text-bg-success">Disponible</span>
                 </div>
               </div>
@@ -187,7 +187,7 @@
                 <img src="./assets/images/coaching-deportivo.jpg" class="card-img-top" alt="plan coaching deportivo">
                 <div class="card-body">
                   <h5 class="card-title">Coaching deportivo</h5>
-                  <p class="card-text">Si sos deportista y/o trabajas en una entidad deportiva, conoce nuevas herramientas para logar resultados mas eficientes con aprendizajes y procesos para vos</p>
+                  <p class="card-text">Si sos deportista y/o trabajas en una entidad deportiva, conocé nuevas herramientas para logar resultados más eficientes con aprendizajes y procesos para vos</p>
                   <span class="badge text-bg-success">Disponible</span>
                 </div>
               </div>
