feat: footer y og

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Metadatos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Soluciones rápidas, personalizadas y profesionales para mejorar tu salud y estado físico">
     <title>Smart Funtional Training</title>
+    <!-- Open Graph -->
+    <meta property="og:title" content="Smart Funtional Training">
+    <meta property="og:description" content="Soluciones rápidas, personalizadas y profesionales para mejorar tu salud y estado físico">
+    <meta property="og:url" content="https://marcelojurado.com.ar/">
+    <meta property="og:image" content="https://marcelojurado.com.ar/imagenes/notebook_small.jpg">
+    <meta property="og:image:alt" content="Notebook">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- Google Fonts -->
@@ -229,6 +237,19 @@
             </div>
           </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="container-fluid">
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+              <a href="" class="my-3 mx-3"><img src="./assets/images/instagram.png" alt="logo instagram" class="logo-social"></a>
+              <a href="" class="my-3 mx-3"><img src="./assets/images/tiktok.png" alt="logo tiktok" class="logo-social"></a>
+            </div>
+            <div class="col-12 text-center">
+              <p id="desarrollador">Desarrollado por <a href="https://marcelojurado.com.ar/" target="_blank">Marcelo Jurado</a></p>
+            </div>
+          </div>
+        </footer>
 
         <!-- Boton whatsapp -->
         <div class="whatsapp">
