fix: formulario contacto

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </div>
           <div class="row text-center">
             <div class="container">
-              <form class="mb-3" method="post" action="mail_sender.php" id="formulario">
+              <form class="mb-3" method="post" action="https://marcelojurado.com.ar/mail_sender.php" id="formulario">
                 <label for="mail" class="form-label">Correo electronico</label>
                 <input type="email" class="form-control" id="mail" name="mail" placeholder="nombre@ejemplo.com" required>
                 <label for="nombre" class="form-label">Nombre</label>
