--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Smart Funtional Training">
     <meta property="og:description" content="Soluciones rápidas, personalizadas y profesionales para mejorar tu salud y estado físico">
-    <meta property="og:url" content="https://marcelonj.github.io/smartfuntionaltraining/">
+    <meta property="og:url" content="https://smartfuntionaltraining.netlify.app/">
     <meta property="og:image" content="https://github.com/marcelonj/smartfuntionaltraining/blob/main/assets/images/smartfuntionaltraining-logo.png?raw=true">
     <meta property="og:image:alt" content="smart funtional training logo">
     <!-- Bootstrap -->
