fix: social media buttons

--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
         <footer class="container-fluid">
           <div class="row">
             <div class="col-12 d-flex justify-content-center">
-              <a href="" class="my-3 mx-3"><img src="./assets/images/instagram.png" alt="logo instagram" class="logo-social"></a>
-              <a href="" class="my-3 mx-3"><img src="./assets/images/tiktok.png" alt="logo tiktok" class="logo-social"></a>
+              <a href="https://www.instagram.com/smart.training2024/" class="my-3 mx-3"><img src="./assets/images/instagram.png" alt="logo instagram" class="logo-social"></a>
+              <a href="https://www.tiktok.com/@smart.funtional.t" class="my-3 mx-3"><img src="./assets/images/tiktok.png" alt="logo tiktok" class="logo-social"></a>
             </div>
             <div class="col-12 text-center">
               <p id="desarrollador">Desarrollado por <a href="https://marcelojurado.com.ar/" target="_blank">Marcelo Jurado</a></p>
