--- a/index.html
+++ b/index.html
@@ -217,17 +217,48 @@
                 <input type="email" class="form-control" id="mail" name="mail" placeholder="nombre@ejemplo.com" required>
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
-                <label for="seleccion" class="form-label">Plan a consultar</label>
-                <select class="form-select" aria-label="Default select example" name="seleccion" id="seleccion" required>
-                  <option selected>Seleccione el tipo de consulta</option>
-                  <option value="1">Plan online</option>
-                  <option value="2">Plan híbrido</option>
-                  <option value="3">Plan presencial</option>
-                  <option value="4">Coaching ontológico</option>
-                  <option value="5">Coaching deportivo</option>
-                  <option value="0">Otros</option>
-                </select>
-                <p class="d-none" id="texto-rojo">Selecione una opción</p>
+
+                <p>Entrenamiento</p>
+                <input type="radio" name="entrenamiento" id="entrenamiento_si" value="si">
+                <label for="entrenamiento_si" class="form-label">Si</label>
+                <input type="radio" name="entrenamiento" id="entrenamiento_no" value="no" checked>
+                <label for="entrenamiento_no" class="form-label">No</label>
+                <div class="contenedor_opciones d-none" id="opciones_entrenamiento">
+                  <p>¿Qué desea lograr?</p>
+                  <input type="radio" name="objetivo" id="objetivo_masa_muscular" value="masa_muscular">
+                  <label for="objetivo_masa_muscular" class="form-label">Ganar masa muscular</label>
+                  <input type="radio" name="objetivo" id="perder_grasa" value="perder_grasa">
+                  <label for="perder_grasa" class="form-label">Perder grasa</label>
+                </div>
+
+                <p>Asesorias</p>
+                <input type="radio" name="asesorias" id="asesorias_si" value="si">
+                <label for="asesorias_si" class="form-label">Si</label>
+                <input type="radio" name="asesorias" id="asesorias_no" value="no" checked>
+                <label for="asesorias_no" class="form-label">No</label>
+                <div class="contenedor_opciones d-none" id="opciones_asesorias">
+                  <p>Cantidad de asesorias a la semana</p>
+                  <input type="radio" name="asesorias_cantidad" id="asesorias_1" value="1">
+                  <label for="asesorias_1" class="form-label">1</label>
+                  <input type="radio" name="asesorias_cantidad" id="asesorias_2" value="2">
+                  <label for="asesorias_2" class="form-label">2</label>
+                  <input type="radio" name="asesorias_cantidad" id="asesorias_4" value="4">
+                  <label for="asesorias_4" class="form-label">4</label>
+                </div>
+
+                <p>Coaching</p>
+                <input type="radio" name="coaching" id="coaching_si" value="si">
+                <label for="coaching_si" class="form-label">Si</label>
+                <input type="radio" name="coaching" id="coaching_no" value="no" checked>
+                <label for="coaching_no" class="form-label">No</label>
+                <div class="contenedor_opciones d-none" id="opciones_coaching">
+                  <p>Tipo de coaching</p>
+                  <input type="radio" name="coaching_tipo" id="coaching_ontologico" value="ontologico">
+                  <label for="coaching_ontologico" class="form-label">Ontológico</label>
+                  <input type="radio" name="coaching_tipo" id="coaching_deportivo" value="deportivo">
+                  <label for="coaching_deportivo" class="form-label">Deportivo</label>                
+                </div>
+
                 <div class="mb-3">
                   <label for="mensaje" class="form-label">Mensaje</label>
                   <textarea class="form-control" id="mensaje" name="mensaje" rows="3" placeholder="Dejenos su mensaje...(opcional)"></textarea>
