Se agregaron animaciones a los campos del formulario

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Links -->
     <link rel="shortcut icon" href="./assets/images/smartfuntionaltraining-logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   </head>
 <body>
         <!-- Header -->
@@ -223,7 +224,7 @@
                 <label for="entrenamiento_si" class="form-label">Si</label>
                 <input type="radio" name="entrenamiento" id="entrenamiento_no" value="no" checked>
                 <label for="entrenamiento_no" class="form-label">No</label>
-                <div class="contenedor_opciones d-none" id="opciones_entrenamiento">
+                <div class="contenedor_opciones d-none animate__animated animate__zoomIn" id="opciones_entrenamiento">
                   <p>¿Qué desea lograr?</p>
                   <input type="radio" name="objetivo" id="objetivo_masa_muscular" value="masa_muscular">
                   <label for="objetivo_masa_muscular" class="form-label">Ganar masa muscular</label>
@@ -236,7 +237,7 @@
                 <label for="asesorias_si" class="form-label">Si</label>
                 <input type="radio" name="asesorias" id="asesorias_no" value="no" checked>
                 <label for="asesorias_no" class="form-label">No</label>
-                <div class="contenedor_opciones d-none" id="opciones_asesorias">
+                <div class="contenedor_opciones d-none animate__animated animate__zoomIn" id="opciones_asesorias">
                   <p>Cantidad de asesorias a la semana</p>
                   <input type="radio" name="asesorias_cantidad" id="asesorias_1" value="1">
                   <label for="asesorias_1" class="form-label">1</label>
@@ -251,7 +252,7 @@
                 <label for="coaching_si" class="form-label">Si</label>
                 <input type="radio" name="coaching" id="coaching_no" value="no" checked>
                 <label for="coaching_no" class="form-label">No</label>
-                <div class="contenedor_opciones d-none" id="opciones_coaching">
+                <div class="contenedor_opciones d-none animate__animated animate__zoomIn" id="opciones_coaching">
                   <p>Tipo de coaching</p>
                   <input type="radio" name="coaching_tipo" id="coaching_ontologico" value="ontologico">
                   <label for="coaching_ontologico" class="form-label">Ontológico</label>
