--- a/index.html
+++ b/index.html
@@ -219,46 +219,50 @@
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
 
-                <p class="mt-4">Entrenamiento</p>
-                <input type="radio" name="entrenamiento" id="entrenamiento_si" value="si" class="form-check-input mb-3">
-                <label for="entrenamiento_si" class="form-check-label label-opciones">Si</label>
-                <input type="radio" name="entrenamiento" id="entrenamiento_no" value="no" class="form-check-input mb-3" checked>
-                <label for="entrenamiento_no" class="form-check-label label-opciones">No</label>
-                <div class="contenedor-opciones d-none animate__animated animate__zoomIn" id="opciones_entrenamiento">
-                  <p>¿Qué desea lograr?</p>
-                  <input type="radio" name="objetivo" id="masa_muscular" value="masa_muscular" class="form-check-input mb-3">
-                  <label for="masa_muscular" class="form-check-label label-opciones">Ganar masa muscular</label>
-                  <input type="radio" name="objetivo" id="perder_grasa" value="perder_grasa" class="form-check-input mb-3">
-                  <label for="perder_grasa" class="form-check-label label-opciones">Perder grasa</label>
+                <div id="pregunta">¿Qué opciones te interesan agregar a tu plan?</div>
+                <div class="contenedor-opciones">
+                  <p class="mt-2">Entrenamiento</p>
+                  <input type="radio" name="entrenamiento" id="entrenamiento_si" value="si" class="form-check-input mb-3">
+                  <label for="entrenamiento_si" class="form-check-label label-opciones">Si</label>
+                  <input type="radio" name="entrenamiento" id="entrenamiento_no" value="no" class="form-check-input mb-3" checked>
+                  <label for="entrenamiento_no" class="form-check-label label-opciones">No</label>
+                  <div class="d-none animate__animated animate__zoomIn" id="opciones_entrenamiento">
+                    <p>¿Qué desea lograr?</p>
+                    <input type="radio" name="objetivo" id="masa_muscular" value="masa_muscular" class="form-check-input mb-3">
+                    <label for="masa_muscular" class="form-check-label label-opciones">Ganar masa muscular</label>
+                    <input type="radio" name="objetivo" id="perder_grasa" value="perder_grasa" class="form-check-input mb-3">
+                    <label for="perder_grasa" class="form-check-label label-opciones">Perder grasa</label>
+                  </div>
+  
+                  <p>Asesorias</p>
+                  <input type="radio" name="asesorias" id="asesorias_si" value="si" class="form-check-input mb-3">
+                  <label for="asesorias_si" class="form-check-label label-opciones">Si</label>
+                  <input type="radio" name="asesorias" id="asesorias_no" value="no" class="form-check-input mb-3" checked>
+                  <label for="asesorias_no" class="form-check-label label-opciones">No</label>
+                  <div class="d-none animate__animated animate__zoomIn" id="opciones_asesorias">
+                    <p>Cantidad de asesorias a la semana</p>
+                    <input type="radio" name="asesorias_cantidad" id="asesorias_1" value="1" class="form-check-input mb-3">
+                    <label for="asesorias_1" class="form-check-label label-opciones">1</label>
+                    <input type="radio" name="asesorias_cantidad" id="asesorias_2" value="2" class="form-check-input mb-3">
+                    <label for="asesorias_2" class="form-check-label label-opciones">2</label>
+                    <input type="radio" name="asesorias_cantidad" id="asesorias_4" value="4" class="form-check-input mb-3">
+                    <label for="asesorias_4" class="form-check-label label-opciones">4</label>
+                  </div>
+  
+                  <p>Coaching</p>
+                  <input type="radio" name="coaching" id="coaching_si" value="si" class="form-check-input mb-3">
+                  <label for="coaching_si" class="form-check-label label-opciones">Si</label>
+                  <input type="radio" name="coaching" id="coaching_no" value="no" class="form-check-input mb-3" checked>
+                  <label for="coaching_no" class="form-check-label label-opciones">No</label>
+                  <div class="d-none animate__animated animate__zoomIn" id="opciones_coaching">
+                    <p>Tipo de coaching</p>
+                    <input type="radio" name="coaching_tipo" id="coaching_ontologico" value="ontologico" class="form-check-input mb-3">
+                    <label for="coaching_ontologico" class="form-check-label label-opciones">Ontológico</label>
+                    <input type="radio" name="coaching_tipo" id="coaching_deportivo" value="deportivo" class="form-check-input mb-3">
+                    <label for="coaching_deportivo" class="form-check-label label-opciones">Deportivo</label>                
+                  </div>
                 </div>
 
-                <p>Asesorias</p>
-                <input type="radio" name="asesorias" id="asesorias_si" value="si" class="form-check-input mb-3">
-                <label for="asesorias_si" class="form-check-label label-opciones">Si</label>
-                <input type="radio" name="asesorias" id="asesorias_no" value="no" class="form-check-input mb-3" checked>
-                <label for="asesorias_no" class="form-check-label label-opciones">No</label>
-                <div class="contenedor-opciones d-none animate__animated animate__zoomIn" id="opciones_asesorias">
-                  <p>Cantidad de asesorias a la semana</p>
-                  <input type="radio" name="asesorias_cantidad" id="asesorias_1" value="1" class="form-check-input mb-3">
-                  <label for="asesorias_1" class="form-check-label label-opciones">1</label>
-                  <input type="radio" name="asesorias_cantidad" id="asesorias_2" value="2" class="form-check-input mb-3">
-                  <label for="asesorias_2" class="form-check-label label-opciones">2</label>
-                  <input type="radio" name="asesorias_cantidad" id="asesorias_4" value="4" class="form-check-input mb-3">
-                  <label for="asesorias_4" class="form-check-label label-opciones">4</label>
-                </div>
-
-                <p>Coaching</p>
-                <input type="radio" name="coaching" id="coaching_si" value="si" class="form-check-input mb-3">
-                <label for="coaching_si" class="form-check-label label-opciones">Si</label>
-                <input type="radio" name="coaching" id="coaching_no" value="no" class="form-check-input mb-3" checked>
-                <label for="coaching_no" class="form-check-label label-opciones">No</label>
-                <div class="contenedor-opciones d-none animate__animated animate__zoomIn" id="opciones_coaching">
-                  <p>Tipo de coaching</p>
-                  <input type="radio" name="coaching_tipo" id="coaching_ontologico" value="ontologico" class="form-check-input mb-3">
-                  <label for="coaching_ontologico" class="form-check-label label-opciones">Ontológico</label>
-                  <input type="radio" name="coaching_tipo" id="coaching_deportivo" value="deportivo" class="form-check-input mb-3">
-                  <label for="coaching_deportivo" class="form-check-label label-opciones">Deportivo</label>                
-                </div>
 
                 <div class="mb-3">
                   <label for="mensaje" class="form-label">Mensaje</label>
