Se corrigio la vista del formulario en celulares

--- a/index.html
+++ b/index.html
@@ -228,10 +228,16 @@
                   <label for="entrenamiento_no" class="form-check-label label-opciones">No</label>
                   <div class="d-none animate__animated animate__zoomIn" id="opciones_entrenamiento">
                     <p>¿Qué desea lograr?</p>
-                    <input type="radio" name="objetivo" id="masa_muscular" value="masa_muscular" class="form-check-input mb-3">
-                    <label for="masa_muscular" class="form-check-label label-opciones">Ganar masa muscular</label>
-                    <input type="radio" name="objetivo" id="perder_grasa" value="perder_grasa" class="form-check-input mb-3">
-                    <label for="perder_grasa" class="form-check-label label-opciones">Perder grasa</label>
+                    <div class="d-flex flex-column flex-md-row justify-content-center">
+                      <div>
+                        <input type="radio" name="objetivo" id="masa_muscular" value="masa_muscular" class="form-check-input mb-3">
+                        <label for="masa_muscular" class="form-check-label label-opciones">Ganar masa muscular</label>
+                      </div>
+                      <div>
+                        <input type="radio" name="objetivo" id="perder_grasa" value="perder_grasa" class="form-check-input mb-3">
+                      <label for="perder_grasa" class="form-check-label label-opciones">Perder grasa</label>
+                      </div>
+                    </div>
                   </div>
   
                   <p>Asesorias</p>
